--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,7 @@ a  {
 
     .contactContent {
         max-width: 230px;
+        transform: translateY(4em);
     }
 
     #forname {
@@ -549,8 +550,8 @@ a  {
     }
 
     .title {
-        font-size: 1.5em;
-        transform: translate(1.2em, 11.1em);
+        font-size: 1.4em;
+        transform: translate(1.2em, 11.9em);
     }
 
     .me {
