--- a/css/style.css
+++ b/css/style.css
@@ -551,7 +551,7 @@ a  {
 
     .title {
         font-size: 1.4em;
-        transform: translate(1.2em, 11.9em);
+        transform: translate(1.1em, 11.9em);
     }
 
     .me {
@@ -572,5 +572,14 @@ a  {
     
      #glasses {
         display: none;
+     }
+
+     #mailImage {
+        transform: translateY(2em);
+     }
+
+     #blur {
+        animation-name: none;
+        filter: blur(0px);
      }
 }
