--- a/css/style.css
+++ b/css/style.css
@@ -431,8 +431,7 @@ input, textarea {
 
 @keyframes contactgone {
     0%   {display: flex; opacity: 1; transform: translateY(0em);}
-  99% { opacity: 0; transform: translateY(-2em);}
-  100% {display: none;}
+  100% { opacity: 0; transform: translateY(-2em); display: none;}
 }
 
 
